[PLAT-8091]Replace Replicated installation with YBA installer based installation
Summary:
Support YBA Installer based installation and upgrades using the `yba_installer` resource with the
following basic definition:
```
provider "yba" {
  alias = "unauthenticated"
  host  = "<host ip address>"
}
resource "yba_installer" "install" {
  provider                  = yba.unauthenticated
  ssh_host_ip               = "<ip-of-yba-node-for-ssh-commands>"
  ssh_user                  = "<ssh-user>"
  ssh_private_key           = "<ssh-private-key-filepath>"
  yba_license_file          = "<path-to-yba-license.lic-file>"
  application_settings_file = "<path-to-application_settings.conf-file>"
  yba_version               = "<YugabyteDB Anywhere-version>"
}
```

Following [[ https://developer.hashicorp.com/terraform/plugin/sdkv2/best-practices/deprecations | SDKV2 Deprecation Guide ]] for deprecation strategy.

Test Plan: Verify basic workflow on YBA installer based installation

Reviewers: sneelakantan

Reviewed By: sneelakantan

Subscribers: yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D26455

--- a/templates/resources/installation.md.tmpl
+++ b/templates/resources/installation.md.tmpl
@@ -6,7 +6,11 @@ description: |-
 
 # {{.Name}} ({{.Type}})
 
+~> **Warning:** *yba_installation* resource is deprecated. Please refer to *yba_installer* resource for YugabyteDB Anywhere installations.
+
 {{ .Description | trimspace }}
+
+~> **Note:** *yba_installation* resource cannot be used to upgrade YugabyteDB Anywhere versions. Please log into the Replicated Console to access upgrade operations.
 
 ## Example Usage
 
