[PLAT-10890] Documentation improvements
Summary:
1. Use curl instead of wget to download yba-installer tar
2. Add explanation to Cluster type field values in resource_universe
3. Add complete backup location requirement in storage config

Test Plan: NA

Reviewers: sneelakantan, ghodge

Reviewed By: sneelakantan, ghodge

Subscribers: ghodge, yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D29573

--- a/templates/resources/installer.md.tmpl
+++ b/templates/resources/installer.md.tmpl
@@ -6,6 +6,8 @@ description: |-
 
 # {{.Name}} ({{.Type}})
 
+-> **Note:** Ensure the YugabyteDB Anywhere host has **curl** installed to allow the YBA Installer package downloads during *terraform apply*.
+
 {{ .Description | trimspace }}
 
 ## Example Usage
