[PLAT-11097]Accept credentials as an input in cloud provider, storage configurations
Summary:
Allow credentials to be inserted for cloud providers and storage configurations in the resource
definition. Currently implemented for AWS (and S3) and Azure cloud providers and storage
configurations.

Azure storage config resource:
```
resource "yba_storage_config_resource" "az_storage" {

  name            = "AZ"
  backup_location = local.az_backup_location
  config_name     = "terraform-az-config"
  azure_credentials {
    sas_token = "<AZURE SAS TOKEN>"
  }
}
```

Azure cloud provider:
```
resource "yba_cloud_provider" "azure" {
  code = "azu"

  name = "${local.cluster_name}-provider"
 azure_config_settings {
    subscription_id =  "<AZURE SUBSCRIPTION ID>"
    tenant_id =  "<TENANT ID>"
    client_id = "<CLIENT ID>"
    client_secret = "<CLIENT SECRET>"
    resource_group = "<AZURE RG>"
}
  regions {
    code      = "westus2"
    name      = "westus2"
    vnet_name = "<>"
    zones {
      code   = "westus2-1"
      name   = "westus2-1"
      subnet = "<>"
    }
    zones {
      code   = "westus2-2"
      name   = "westus2-2"
      subnet = "<>"
    }
    zones {
      code   = "westus2-3"
      name   = "westus2-3"
      subnet = "<>"
    }
  }

  ssh_port        = 22
  air_gap_install = false
}
```

AWS cloud provider
```
resource "yba_cloud_provider" "aws" {
  code = "aws"
 name = "${local.cluster_name}-provider"
aws_config_settings {
      access_key_id = "<AWS ACCESS KEY ID>"
     secret_access_key = "<AWS SECRET ACCESS KEY>"
 }
  regions {
    code              = "us-west-2"
    name              = "us-west-2"
    security_group_id = "<>"
    vnet_name         = "<>"
    zones {
      code   = "us-west-2c"
      name   = "us-west-2c"
      subnet = "<>"
    }
  }

  ssh_port        = 22
  air_gap_install = false
}
```

S3 storage configuration:
```
resource "yba_storage_config_resource" "aws_storage" {

  name            = "S3"
  backup_location = local.s3_back

--- a/templates/resources/storage_config_resource.md.tmpl
+++ b/templates/resources/storage_config_resource.md.tmpl
@@ -8,17 +8,17 @@ description: |-
 
 {{ .Description | trimspace }}
 
-The following credentials are required as environment variables to configure the corresponding Backup storage configurations:
+The following credentials are required as environment variables (if fields are not set) to configure the corresponding Backup storage configurations:
 
-|Cloud Provider|Setting|Environment Variable|
-|-------|--------|-------------------------------|
-|[S3](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-envvars.html)|||
-||Access Key ID|`AWS_ACCESS_KEY_ID`|
-||Secret Access Key|`AWS_SECRET_ACCESS_KEY`|
-|[GCS](https://cloud.google.com/docs/authentication/application-default-credentials)|||
-|| GCP Service Account Credentials File Path|`GOOGLE_APPLICATION_CREDENTIALS`|
-|[Azure](https://learn.microsoft.com/en-us/azure/developer/go/azure-sdk-authentication?tabs=bash)|||
-||Azure Storage SAS Token|`AZURE_STORAGE_SAS_TOKEN`|
+|Cloud Provider|Setting|Configuration Field|Environment Variable|
+|-------|--------|----------|-------------------------------|
+|[S3](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-envvars.html)||||
+||Access Key ID|`s3_credentials.access_key_id`|`AWS_ACCESS_KEY_ID`|
+||Secret Access Key|`s3_credentials.secret_access_key`|`AWS_SECRET_ACCESS_KEY`|
+|[GCS](https://cloud.google.com/docs/authentication/application-default-credentials)||||
+|| GCP Service Account Credentials File Path||`GOOGLE_APPLICATION_CREDENTIALS`|
+|[Azure](https://learn.microsoft.com/en-us/azure/developer/go/azure-sdk-authentication?tabs=bash)||||
+||Azure Storage SAS Token|`azure_credentials.sas_token`|`AZURE_STORAGE_SAS_TOKEN`|
 
 -> **Note:** S3 Environment variables are not required for IAM based S3 storage configurations. Please set *use_iam_instance_profile* to use host IAM configuration for S3 storage configurations.
 
