--- a/templates/resources/storage_config_resource.md.tmpl
+++ b/templates/resources/storage_config_resource.md.tmpl
@@ -16,7 +16,7 @@ The following credentials are required as environment variables (if fields are n
 ||Access Key ID|`s3_credentials.access_key_id`|`AWS_ACCESS_KEY_ID`|
 ||Secret Access Key|`s3_credentials.secret_access_key`|`AWS_SECRET_ACCESS_KEY`|
 |[GCS](https://cloud.google.com/docs/authentication/application-default-credentials)||||
-|| GCP Service Account Credentials File Path||`GOOGLE_APPLICATION_CREDENTIALS`|
+|| GCP Service Account Credentials File Path|`gcs_credentials.application_credentials`|`GOOGLE_APPLICATION_CREDENTIALS`|
 |[Azure](https://learn.microsoft.com/en-us/azure/developer/go/azure-sdk-authentication?tabs=bash)||||
 ||Azure Storage SAS Token|`azure_credentials.sas_token`|`AZURE_STORAGE_SAS_TOKEN`|
 
