Rectify docs for cloud provider
Summary: Update docs to reflect new fields in cloud_provider resource

Test Plan: -

Reviewers: skurapati

Reviewed By: skurapati

Subscribers: yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D36047

--- a/templates/resources/cloud_provider.md.tmpl
+++ b/templates/resources/cloud_provider.md.tmpl
@@ -16,7 +16,7 @@ The following credentials are required as environment variables (if fields are n
 ||Access Key ID|`aws_config_settings.access_key_id`|`AWS_ACCESS_KEY_ID`|
 ||Secret Access Key|`aws_config_settings.secret_access_key`|`AWS_SECRET_ACCESS_KEY`|
 |[GCP](https://cloud.google.com/docs/authentication/application-default-credentials)||||
-|| GCP Service Account Credentials File Path|`gcp_config_settings.application_credentials`|`GOOGLE_APPLICATION_CREDENTIALS`|
+|| GCP Service Account Credentials File Path|`gcp_config_settings.credentials`|`GOOGLE_APPLICATION_CREDENTIALS`|
 |[Azure](https://learn.microsoft.com/en-us/azure/developer/go/azure-sdk-authentication?tabs=bash)||||
 ||Active Subscription ID|`azure_config_settings.subscription_id`|`AZURE_SUBSCRIPTION_ID`|
 ||Resource Group|`azure_config_settings.resource_group`|`AZURE_RG`|
